--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BebboWorld</title>
+<html lang="fr">
 
-    <link rel="stylesheet" href="css/themes.css">
-    <link rel="stylesheet" href="css/menu.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BebboWorld</title>
+
+  <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico" />
+
+  <!-- fonts -->
+  <link rel="stylesheet" href="assets/fonts/bebas.css" />
+  <link rel="stylesheet" href="assets/fonts/oswald.css" />
+  <link rel="stylesheet" href="assets/fonts/roboto.css" />
+
+
+  <link rel="stylesheet" href="css/themes.css">
+  <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="css/bookcard.css">
 </head>
+
 <body>
-    <section class="menu">
-        <div id="menuid">
-          <a href="#">link</a>
-          <a href="#">link</a>
-          <a href="#">link</a>
-          <a href="#">link</a>
-        </div>
-      </section>
-    
+  <section class="menu">
+    <div id="menuid">
+      <a href="#">Bibliotèque</a>
+      <a href="#">Médaille</a>
+      <a href="#">Statistique</a>
+      <a href="#">Ajout</a>
+    </div>
+  </section>
+  <section class="booksection">
+    <div class="book">
+      <div class="bookgrid">
+        <img class="couverture" src="assets/images/couvertures/TheAdventureOfBeebo.jpg" alt="" srcset="">
+        <h3 class="titlebook">The Adventure of Beebo</h3>
+        <p class="bookdescription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus totam dolorum
+          expedita distinctio libero quas cupiditate officiis ipsum animi corrupti laboriosam voluptas eos esse dicta
+          necessitatibus porro, nihil sint corporis sit commodi non qui fuga facilis omnis. Omnis, illum quia architecto
+          facere at rem ab hic dolor consequuntur. Eaque, suscipit.</p>
+      </div>
+      <p class="nbpages">Page: 250</p>
+      <p class="booktype">Romance</p>
+      <p class="bookgenre">Hardback</p>
+    </div>
+  </section>
 </body>
+
 </html>
