--- a/html/ajout.html
+++ b/html/ajout.html
@@ -8,7 +8,6 @@
 
   <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.ico" />
 
-
   <!-- fonts -->
   <link rel="stylesheet" href="..\assets/fonts/bebas.css" />
   <link rel="stylesheet" href="..\assets/fonts/oswald.css" />
@@ -27,7 +26,7 @@
       <a href="#">Bibliothèque</a>
       <a href="medaille.html">Médaille</a>
       <a href="#">Statistique</a>
-      <a href="#">Ajout</a>
+      <a href="ajout.html">Ajout</a>
     </div>
   </section>
 
