--- a/html/ajout.html
+++ b/html/ajout.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="..\css/themes.css">
   <link rel="stylesheet" href="..\css/menu.css">
   <link rel="stylesheet" href="..\css/medaillegrid.css">
-  <link rel="stylesheet" href="..\css/medaillelist.css">
+  <link rel="stylesheet" href="..\css/formulaire.css">
 </head>
 
 <body>
@@ -30,6 +30,12 @@
     </div>
   </section>
 
+  <section class="formulairesection">
+    <form action="" method="post">
+      <input class="inputbx" type="text">
+      <input type="date" value="2023-01-01" min="2000-01-01" max="2050-12-31">
+      <input type="button" value="Envoyer">
+    </form>
   </section>
 
 </body>
