--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#">Bibliothèque</a>
       <a href="medaille.html">Médaille</a>
       <a href="#">Statistique</a>
-      <a href="#">Ajout</a>
+      <a href="html/ajout.html">Ajout</a>
     </div>
   </section>
 
